--- a/index.html
+++ b/index.html
@@ -17,43 +17,43 @@
     <div class="sidebar-center">
       <ul class="list">
         <li class="list-item">
-          <span class="material-symbols-outlined">
+          <span class="list-item-icon material-symbols-outlined">
             space_dashboard
           </span>
           <span class="list-item-text">Dashboard</span>
         </li>
-        <li class="list-item">
-          <span class="material-symbols-outlined">
+        <li class="list-item active">
+          <span class="list-item-icon material-symbols-outlined">
             work
           </span>
           <span class="list-item-text">Projects</span>
         </li>
         <li class="list-item">
-          <span class="material-symbols-outlined">
+          <span class="list-item-icon material-symbols-outlined">
             receipt_long
           </span>
           <span class="list-item-text">Expenses</span>
         </li>
         <li class="list-item">
-          <span class="material-symbols-outlined">
+          <span class="list-item-icon material-symbols-outlined">
             description
           </span>
           <span class="list-item-text">Invoices</span>
         </li>
         <li class="list-item">
-          <span class="material-symbols-outlined">
+          <span class="list-item-icon material-symbols-outlined">
             sms
           </span>
           <span class="list-item-text">Messages</span>
         </li>
         <li class="list-item">
-          <span class="material-symbols-outlined">
+          <span class="list-item-icon material-symbols-outlined">
             line_axis
           </span>
           <span class="list-item-text">Reports</span>
         </li>
         <li class="list-item">
-          <span class="material-symbols-outlined">
+          <span class="list-item-icon material-symbols-outlined">
             settings
           </span>
           <span class="list-item-text">Settings</span>
