--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </span>
           <span class="list-item-text">Dashboard</span>
         </li>
-        <li class="list-item active">
+        <li class="list-item">
           <span class="list-item-icon material-symbols-outlined">
             work
           </span>
